Completed cell balancing (configuration, state machine integration, unit-testing)

--- a/BMS Workspace-git/bms-1227-fw/Phantom_drivers/CMakeLists.txt
+++ b/BMS Workspace-git/bms-1227-fw/Phantom_drivers/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.10)
 
 get_filename_component(PROJECT_PARENT_DIR ../ ABSOLUTE)
 
-project(soc)
+project(Phantom_drivers)
 
-add_executable(soc ${PROJECT_SOURCE_DIR}/source/soc.c ${PROJECT_SOURCE_DIR}/source/bms_data.c ${PROJECT_SOURCE_DIR}/unittest/soc_unittest.c)
+add_executable(phantom_pl455 ${PROJECT_SOURCE_DIR}/source/phantom_pl455.c phantom_pl455_unittest.c
+				${PROJECT_SOURCE_DIR}/mock/mock_Phantom_sci.c ${PROJECT_SOURCE_DIR}/mock/mock_pl455.c)
 
-target_include_directories(soc PUBLIC
-							"${PROJECT_SOURCE_DIR}/include"
-							"${PROJECT_PARENT_DIR}/halcogen_bms_master/include"
-							"${PROJECT_SOURCE_DIR}/unittest/mock")
+target_include_directories(phantom_pl455 PUBLIC "${PROJECT_SOURCE_DIR}/include" 
+							"${PROJECT_PARENT_DIR}/halcogen_bms_master/include")
 
-target_link_libraries(soc
+target_link_libraries(phantom_pl455
 						mock_halcogen_bms_master)
+
+add_subdirectory(soc)
