--- a/BMS Workspace-git/bms-1227-fw/halcogen_bms_master/CMakeLists.txt
+++ b/BMS Workspace-git/bms-1227-fw/halcogen_bms_master/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(mock_halcogen_bms_master)
 
-add_library(mock_halcogen_bms_master ${PROJECT_SOURCE_DIR}/mock/mock_os_task.c)
+add_library(mock_halcogen_bms_master ${PROJECT_SOURCE_DIR}/mock/mock_os_task.c 
+				${PROJECT_SOURCE_DIR}/mock/mock_gio.c ${PROJECT_SOURCE_DIR}/mock/mock_sci.c)
 
 target_include_directories(mock_halcogen_bms_master PUBLIC
 							"${PROJECT_SOURCE_DIR}/include")
