Added watchdog and blinky tasks

--- a/BMS Workspace-git/bms-1227-fw/.settings/org.eclipse.core.resources.prefs
+++ b/BMS Workspace-git/bms-1227-fw/.settings/org.eclipse.core.resources.prefs
@@ -15,8 +15,14 @@ encoding//Debug/source/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/mock/subdir_rules.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/mock/subdir_vars.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/soc/subdir_rules.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/soc/subdir_vars.mk=UTF-8
 encoding//Launchpad_Configuration/Phantom_drivers/source/subdir_rules.mk=UTF-8
 encoding//Launchpad_Configuration/Phantom_drivers/source/subdir_vars.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/subdir_rules.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/subdir_vars.mk=UTF-8
 encoding//Launchpad_Configuration/halcogen_bms_launchpad/source/subdir_rules.mk=UTF-8
 encoding//Launchpad_Configuration/halcogen_bms_launchpad/source/subdir_vars.mk=UTF-8
 encoding//Launchpad_Configuration/halcogen_bms_master/source/subdir_rules.mk=UTF-8
