--- a/BMS Workspace-git/bms-1227-fw/.cproject
+++ b/BMS Workspace-git/bms-1227-fw/.cproject
@@ -311,7 +311,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="halcogen_bms_launchpad/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd|halcogen_bms_master|halcogen_bms_master/source/sys_link.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Phantom_drivers/phantom_pl455_unittest.c|Phantom_drivers/mock|Phantom_drivers/soc|halcogen_bms_launchpad/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd|halcogen_bms_master|halcogen_bms_master/source/sys_link.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
