Refactored tasks to individual drivers and switched directory structure

--- a/BMS Workspace-git/bms-1227-fw/.settings/org.eclipse.core.resources.prefs
+++ b/BMS Workspace-git/bms-1227-fw/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,22 @@
 eclipse.preferences.version=1
+encoding//BMS_Master_Configuration/Phantom_drivers/drivers/soc/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/drivers/soc/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/drivers/source/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/drivers/source/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/mock/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/mock/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/rtos/source/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/rtos/source/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/soc/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/soc/subdir_vars.mk=UTF-8
 encoding//BMS_Master_Configuration/Phantom_drivers/source/subdir_rules.mk=UTF-8
 encoding//BMS_Master_Configuration/Phantom_drivers/source/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/tasks/source/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/Phantom_drivers/tasks/source/subdir_vars.mk=UTF-8
+encoding//BMS_Master_Configuration/halcogen_bms_master/mock/subdir_rules.mk=UTF-8
+encoding//BMS_Master_Configuration/halcogen_bms_master/mock/subdir_vars.mk=UTF-8
 encoding//BMS_Master_Configuration/halcogen_bms_master/source/subdir_rules.mk=UTF-8
 encoding//BMS_Master_Configuration/halcogen_bms_master/source/subdir_vars.mk=UTF-8
 encoding//BMS_Master_Configuration/makefile=UTF-8
@@ -15,6 +31,12 @@ encoding//Debug/source/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/drivers/soc/subdir_rules.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/drivers/soc/subdir_vars.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/drivers/source/subdir_rules.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/drivers/source/subdir_vars.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/rtos/source/subdir_rules.mk=UTF-8
+encoding//Launchpad_Configuration/Phantom_drivers/rtos/source/subdir_vars.mk=UTF-8
 encoding//Launchpad_Configuration/Phantom_drivers/source/subdir_rules.mk=UTF-8
 encoding//Launchpad_Configuration/Phantom_drivers/source/subdir_vars.mk=UTF-8
 encoding//Launchpad_Configuration/halcogen_bms_launchpad/source/subdir_rules.mk=UTF-8
