--- a/BMS Workspace-git/bms-1227-fw/.cproject
+++ b/BMS Workspace-git/bms-1227-fw/.cproject
@@ -190,8 +190,10 @@
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ABI.562229473" name="Application binary interface. (--abi)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ABI" value="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ABI.eabi" valueType="enumerated"/>
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ENUM_TYPE.1475944727" name="Designate enum type (--enum_type)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ENUM_TYPE" value="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ENUM_TYPE.packed" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.INCLUDE_PATH.953852540" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.INCLUDE_PATH" valueType="includePath">
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/drivers/include}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/rtos/include}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/drivers/soc}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/halcogen_bms_master/include}"/>
-									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/include}"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
 								</option>
@@ -230,7 +232,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="sys_link.cmd|halcogen_bms_launchpad|halcogen_bms_master/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Phantom_drivers/drivers/soc/soc_unittest.c|halcogen_bms_master/mock|Phantom_drivers/mock|Phantom_drivers/phantom_pl455_unittest.c|sys_link.cmd|halcogen_bms_launchpad|halcogen_bms_master/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -270,8 +272,10 @@
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ABI.1447039426" name="Application binary interface. (--abi)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ABI" value="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ABI.eabi" valueType="enumerated"/>
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ENUM_TYPE.57594794" name="Designate enum type (--enum_type)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ENUM_TYPE" value="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.ENUM_TYPE.packed" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.INCLUDE_PATH.1896024921" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.INCLUDE_PATH" valueType="includePath">
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/drivers/include}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/drivers/soc}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/rtos/include}"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
-									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/include}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/halcogen_bms_launchpad/include}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
 								</option>
@@ -311,7 +315,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="halcogen_bms_launchpad/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd|halcogen_bms_master|halcogen_bms_master/source/sys_link.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Phantom_drivers/drivers/soc/soc_unittest.c|Phantom_drivers/phantom_pl455_unittest.c|Phantom_drivers/mock|halcogen_bms_launchpad/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd|halcogen_bms_master|halcogen_bms_master/source/sys_link.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
