--- a/BMS Workspace-git/bms-1227-fw/.settings/org.eclipse.core.resources.prefs
+++ b/BMS Workspace-git/bms-1227-fw/.settings/org.eclipse.core.resources.prefs
@@ -24,6 +24,22 @@ encoding//BMS_Master_Configuration/objects.mk=UTF-8
 encoding//BMS_Master_Configuration/sources.mk=UTF-8
 encoding//BMS_Master_Configuration/subdir_rules.mk=UTF-8
 encoding//BMS_Master_Configuration/subdir_vars.mk=UTF-8
+encoding//Debug/Phantom_drivers/drivers/soc/subdir_rules.mk=UTF-8
+encoding//Debug/Phantom_drivers/drivers/soc/subdir_vars.mk=UTF-8
+encoding//Debug/Phantom_drivers/drivers/source/subdir_rules.mk=UTF-8
+encoding//Debug/Phantom_drivers/drivers/source/subdir_vars.mk=UTF-8
+encoding//Debug/Phantom_drivers/mock/subdir_rules.mk=UTF-8
+encoding//Debug/Phantom_drivers/mock/subdir_vars.mk=UTF-8
+encoding//Debug/Phantom_drivers/rtos/source/subdir_rules.mk=UTF-8
+encoding//Debug/Phantom_drivers/rtos/source/subdir_vars.mk=UTF-8
+encoding//Debug/Phantom_drivers/subdir_rules.mk=UTF-8
+encoding//Debug/Phantom_drivers/subdir_vars.mk=UTF-8
+encoding//Debug/halcogen_bms_launchpad/source/subdir_rules.mk=UTF-8
+encoding//Debug/halcogen_bms_launchpad/source/subdir_vars.mk=UTF-8
+encoding//Debug/halcogen_bms_master/mock/subdir_rules.mk=UTF-8
+encoding//Debug/halcogen_bms_master/mock/subdir_vars.mk=UTF-8
+encoding//Debug/halcogen_bms_master/source/subdir_rules.mk=UTF-8
+encoding//Debug/halcogen_bms_master/source/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/source/subdir_rules.mk=UTF-8
