--- a/BMS Workspace-git/bms-1227-fw/.cproject
+++ b/BMS Workspace-git/bms-1227-fw/.cproject
@@ -235,7 +235,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="halcogen_bms_master/source/sys_main.c|Phantom_drivers/drivers/soc/soc_unittest.c|halcogen_bms_master/mock|Phantom_drivers/mock|Phantom_drivers/phantom_pl455_unittest.c|sys_link.cmd|halcogen_bms_launchpad|halcogen_bms_master/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Phantom_drivers/drivers/soc/soc_unittest.c|halcogen_bms_master/mock|Phantom_drivers/mock|Phantom_drivers/phantom_pl455_unittest.c|sys_link.cmd|halcogen_bms_launchpad|halcogen_bms_master/source/sys_link.cmd|TMS570LS122xFlashLnk.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -281,7 +281,8 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.INCLUDE_PATH.1302319018" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/drivers/include}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/drivers/soc}"/>
-									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/rtos/include}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/rtos/include}"/> 
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/Phantom_drivers/hercules-phantom-lib/rtos-common}"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/halcogen_bms_launchpad/include}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
