gitignore update to remove path prefix from jxuserdata

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .metadata/
 .vscode/settings.json
 RemoteSystemsTempFiles/.project
-./.jxbrowser.userdata
+.jxbrowser.userdata
 **/BMS Workspace-git/.jxbrowser-data/
